// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TriggerErrorInfo should render 1`] = `
<InfosMigration
  description={
    <React.Fragment>
      <ForwardRef
        className="u-pomegranate"
        ellipsis={false}
        tag="div"
      >
        error.job.LOGIN_FAILED.title
      </ForwardRef>
      <ForwardRef
        ellipsis={false}
        tag="div"
      >
        <Markdown
          source="error.job.LOGIN_FAILED.description"
        />
      </ForwardRef>
    </React.Fragment>
  }
  theme="danger"
/>
`;

exports[`TriggerErrorInfo should render regular Error 1`] = `
<InfosMigration
  description={
    <React.Fragment>
      <ForwardRef
        className="u-pomegranate"
        ellipsis={false}
        tag="div"
      >
        error.job.UNKNOWN_ERROR.title
      </ForwardRef>
      <ForwardRef
        ellipsis={false}
        tag="div"
      >
        <Markdown
          source="error.job.UNKNOWN_ERROR.description (Something is undefined)"
        />
      </ForwardRef>
    </React.Fragment>
  }
  theme="danger"
/>
`;
